--- a/Services.css
+++ b/Services.css
@@ -176,13 +176,13 @@ margin-bottom: 50px;
     line-height: 50px;
 }
 
-ul li:nth-child(odd), .bt
+.uls .lis:nth-child(odd), .bt
 {
     background: linear-gradient(rgb(113, 217, 231),rgb(10, 77, 116));
     margin: 30px 0;
     padding: 20px;
     color: White;
 }
-ul li span{
+.uls .lis span{
     margin-left: 76px;
 }
