--- a/contact.css
+++ b/contact.css
@@ -262,7 +262,7 @@
     left: 0px;
     top: 0px;
     height: 300px;
-    background-color: #03a9f4;
+    background-color: #ca6572;
   }
   
   @media (max-width: 768px) {
