--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(221, 153, 221);
+    /* background-color: rgb(221, 153, 221); */
     background-blend-mode:screen;
     background:rgb(124, 122, 216) url(image/banner-bg.png.webp);
     background-size: cover;
