--- a/Services.css
+++ b/Services.css
@@ -31,7 +31,7 @@
 
 .service-home{
     background-image: url('https://preview.colorlib.com/theme/sierra/img/banner/banner-bg.png.webp');
-    height: 80vh;
+    height: 50vh;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -153,7 +153,7 @@ z-index: 1;
     background-size: cover;
     background-attachment: fixed;
     padding: 20px 0;
-    margin: 60px 0;
+    /* margin: 60px 0; */
 }
 .service-last{
     width: 510px;
